--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/projectiles.yml
@@ -1,12 +1,17 @@
 弹射物示例:
-    # 贴图使用箭矢还是药水？不写则视为false(药水)
+    # 贴图使用箭矢还是药水？不写则将名称以"箭"结尾的视为箭矢，否则视为药水
     arrowOrPotion: false
     # 是否自动追踪，不写则视为false
     autoTrace: false
     # 自动追踪的寻敌半径，单位（格）。不写则视为12
     autoTraceRadius: 12
+    # 自动追踪时是否可以进行尖锐转向。不写则视为true
+    # 当此处为false时，敌人位置越接近移动方向的相反方向，则转弯越缓慢
+    autoTraceSharpTurning: true
     # 自动追踪的能力，数字越高则追踪转向的最高效率越高。不写则视为4
     autoTraceAbility: 4
+    # 弹射物生成后多久无法自动追踪？不写则视为0
+    noAutoTraceTicks: 0
     # 这个弹射物会不会被闭合的宝箱怪，旋转的火月怪等反弹？不写则视为true
     canBeReflected: true
     # 击中怪物后敌人多少帧后才能被本弹射物再次伤害？（一秒=20帧）不写则视为5
@@ -23,10 +28,14 @@
     projectileSize: 0.125
     # 每帧速度乘以这个数字，例如1.25则为每帧加速25%，不写则视为1
     speedMultiPerTick: 0
-    # 最大速度（单位：格/帧），防止恶魔锄刀类武器的速度突破天际，不写则视为2
-    maxSpeed: 2
+    # 最大速度（单位：格/帧），防止恶魔锄刀类武器的速度突破天际，不写则视为100
+    maxSpeed: 100
     # 是否为爆炸弹幕（损毁时爆炸）？不写则视为false
     isGrenade: false
+    # 是否在接触敌人且穿透未用尽时爆炸？此爆炸不会损坏弹射物。不写则视为false
+    blastOnContactEnemy: false
+    # 是否在接触方块且弹跳未用尽时爆炸？此爆炸不会损坏弹射物。不写则视为false
+    blastOnContactBlock: false
     # 爆炸半径，不写则视为1.5
     blastRadius: 1.5
     # 爆炸是否会伤害玩家，不写则视为false
@@ -43,7 +52,7 @@
     # 弹跳次数和穿透次数是否绑定（弹跳时穿透次数也减少1，反之亦然）？不写则视为false。仅在blockHitAction: bounce时有作用。
     bouncePenetrationBonded: false
     # 弹跳时速度乘的倍数，不写则视为1。仅在blockHitAction: bounce时有作用。
-    bounceVelocityMulti: 0
+    bounceVelocityMulti: 1
     # 轨迹的颜色(R|G|B)，可不写。
     trailColor: 255|125|125
     # 轨迹停留时间（单位：帧，1秒=20帧）。不写则视为10。
@@ -62,10 +71,17 @@
         damageMulti: 0.85
         # 分裂后弹片弹射物类型
         name: 装饰弹片
-        # 分裂方式，normal（默认）: 在原地分裂，star：圣箭落星式分裂 
+        # 分裂方式，normal（默认）: 在原地分裂，star：圣箭落星式分裂，surround：在四周向碰撞点发射
         type: normal
+        # 是否在弹射物因存在时间结束摧毁后发射？默认true
+        fireOnTimeout: true
+        # 是否在弹射物因撞墙损毁后发射？默认true
+        fireOnHitBlock: true
+        # 是否在弹射物因命中敌人损毁后发射？默认true
+        fireOnHitEntity: true
         # 分裂后弹片弹射物速度
         velocity: 0.5
+
 天蓝羽毛:
     autoTrace: true
     blastRadius: 2
@@ -213,12 +229,40 @@
 疯狂飞斧:
     autoTrace: true
 星云奥秘:
+    gravity: 0
+    blockHitAction: bounce
+    bounce: 3
+    penetration: 2
+    projectileSize: 1.5
     autoTrace: true
+    isGrenade: true
     clusterBomb:
         amount: 12
         name: 星云奥秘爆炸弹碎块
         velocity: 0.5
         damageMulti: 0.65
+暗影射线分支:
+    autoTrace: true
+    autoTraceAbility: 2
+    gravity: 0
+    liveTime: 20
+    blockHitAction: thru
+    trailColor: 0|0|175
+自然能量:
+    autoTrace: true
+    autoTraceAbility: 3
+    gravity: 0
+    liveTime: 20
+    blockHitAction: thru
+    trailColor: 100|255|150
+星尘流星:
+    autoTrace: true
+    autoTraceAbility: 2
+    autoTraceSharpTurning: false
+    gravity: 0
+    liveTime: 20
+    blockHitAction: thru
+    trailColor: 25|200|225
 诅咒弹:
     buffInflict:
         - "咒火|140|1"
@@ -251,13 +295,64 @@
     autoTrace: true
 幻象箭:
     autoTrace: true
+红自导能源箭:
+    autoTrace: true
+    autoTraceAbility: 2
+    autoTraceRadius: 24
+    blockHitAction: thru
+    trailColor: 255|0|0
+蓝自导能源箭:
+    autoTrace: true
+    autoTraceAbility: 2
+    autoTraceRadius: 24
+    blockHitAction: thru
+    trailColor: 150|200|255
+绿自导能源箭:
+    autoTrace: true
+    autoTraceAbility: 2
+    autoTraceRadius: 24
+    blockHitAction: thru
+    trailColor: 150|255|150
+粉自导能源箭:
+    autoTrace: true
+    autoTraceAbility: 2
+    autoTraceRadius: 24
+    blockHitAction: thru
+    trailColor: 255|150|200
+黄自导能源箭:
+    autoTrace: true
+    autoTraceAbility: 2
+    autoTraceRadius: 24
+    blockHitAction: thru
+    trailColor: 255|255|0
+紫自导能源箭:
+    autoTrace: true
+    autoTraceAbility: 2
+    autoTraceRadius: 24
+    blockHitAction: thru
+    trailColor: 255|0|255
+橙自导能源箭:
+    autoTrace: true
+    autoTraceAbility: 2
+    autoTraceRadius: 24
+    blockHitAction: thru
+    trailColor: 255|150|50
 亡魂:
     autoTrace: true
     trailColor: 255|255|255
 蝙蝠:
     autoTrace: true
 台风:
+    liveTime: 60
+    projectileSize: 0.5
+    enemyInvincibilityFrame: 10
+    blockHitAction: bounce
+    bounce: 8
+    penetration: 999
+    gravity: 0
     autoTrace: true
+    autoTraceAbility: 2
+    autoTraceRadius: 32
 气泡弹:
     autoTrace: true
 星尘细胞弹:
