--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/weapons.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/weapons.yml
@@ -144,6 +144,14 @@
   size: 4.5
   particleColor:
   - 0|0|175
+翡翠斧:
+  type: SWING
+  autoSwing: true
+  size: 5
+深渊碾碎者:
+  type: SWING
+  autoSwing: true
+  size: 5
 剑鱼:
   type: STAB
   size: 4
