updated dragon core to a newer vesion

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Gui/hud_overlay.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Gui/hud_overlay.yml
@@ -1,12 +1,13 @@
 
 match: "hud"
 priority: 2
-
+updateInterval: 100
 
 Functions:
   # 设置玩家显示的血量
   preRender: |-
-    界面变量.playerHealth = 方法.玩家是否飞行() ? 0 : 方法.玩家血量()
+    界面变量.playerHealth = 方法.玩家是否飞行() ? 0 : 方法.玩家血量();
+    界面变量.playerHealth = 方法.玩家血量();
 
 # star
 star1_texture:
