--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/wings.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Data/wings.yml
@@ -1,67 +1,74 @@
 跳跃之瓶:
-    bounceTime: 1
-    maxProgress: 1
-    maxVelocity: 16
-    maxAcceleration: 100
-    horizontalVelocity: 30
+    extraJumpTime: 1
+    maxSpeed: 0.8
+    maxAcceleration: 1
+    horizontalSpeed: 0.35
 气球束:
-    bounceTime: 3
-    maxProgress: 3
-    maxVelocity: 16
-    maxAcceleration: 100
-    horizontalVelocity: 30
+    extraJumpTime: 3
+    maxSpeed: 0.8
+    maxAcceleration: 1
+    horizontalSpeed: 0.35
 火箭靴:
-    maxProgress: 1.6
-    maxVelocity: 24
-    maxAcceleration: 15
-    horizontalVelocity: 20
+    flightTime: 32
+    maxSpeed: 0.75
+    maxAcceleration: 0.05
+    horizontalSpeed: 0.5
 幽灵靴:
-    maxProgress: 1.6
-    maxVelocity: 24
-    maxAcceleration: 15
-    horizontalVelocity: 20
+    flightTime: 32
+    maxSpeed: 0.75
+    maxAcceleration: 0.05
+    horizontalSpeed: 0.5
 鸟妖之翼:
-    maxProgress: 2.33
-    maxVelocity: 24
-    maxAcceleration: 10
-    horizontalVelocity: 34
+    flightTime: 47
+    maxSpeed: 1
+    maxAcceleration: 0.1
+    horizontalSpeed: 0.6
+    isWing: true
 猪鲨之翼:
-    maxProgress: 3
-    maxVelocity: 30
-    maxAcceleration: 10
-    horizontalVelocity: 41
+    flightTime: 60
+    maxSpeed: 1.5
+    maxAcceleration: 0.175
+    horizontalSpeed: 1
+    isWing: true
 女皇之翼:
-    maxProgress: 2.5
-    maxVelocity: 36
-    maxAcceleration: 15
-    horizontalVelocity: 41
+    flightTime: 50
+    maxSpeed: 1.35
+    maxAcceleration: 0.3
+    horizontalSpeed: 1
+    isWing: true
 喜庆之翼:
-    maxProgress: 2.83
-    maxVelocity: 42
-    maxAcceleration: 10
-    horizontalVelocity: 38
+    flightTime: 57
+    maxSpeed: 1.2
+    maxAcceleration: 0.125
+    horizontalSpeed: 0.9
+    isWing: true
 日耀之翼:
-    maxProgress: 3
-    maxVelocity: 48
-    maxAcceleration: 15
-    horizontalVelocity: 46
+    flightTime: 60
+    maxSpeed: 1.5
+    maxAcceleration: 0.15
+    horizontalSpeed: 1
+    isWing: true
 星尘之翼:
-    maxProgress: 3
-    maxVelocity: 48
-    maxAcceleration: 15
-    horizontalVelocity: 46
+    flightTime: 60
+    maxSpeed: 1.5
+    maxAcceleration: 0.15
+    horizontalSpeed: 1
+    isWing: true
 星云之翼:
-    maxProgress: 2.67
-    maxVelocity: 32
-    maxAcceleration: 10
-    horizontalVelocity: 33
+    flightTime: 53
+    maxSpeed: 1.4
+    maxAcceleration: 0.125
+    horizontalSpeed: 0.95
+    isWing: true
 星璇之翼:
-    maxProgress: 2.67
-    maxVelocity: 32
-    maxAcceleration: 10
-    horizontalVelocity: 33
+    flightTime: 53
+    maxSpeed: 1.4
+    maxAcceleration: 0.125
+    horizontalSpeed: 0.95
+    isWing: true
 天界之翼:
-    maxProgress: 3
-    maxVelocity: 48
-    maxAcceleration: 20
-    horizontalVelocity: 41
+    flightTime: 60
+    maxSpeed: 1.5
+    maxAcceleration: 0.2
+    horizontalSpeed: 1.2
+    isWing: true
