--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Gui/inventory_slots_inventory_open.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/DragonCore/Gui/inventory_slots_inventory_open.yml
@@ -1,94 +1,3 @@
-
-
-# 匹配界面名,hud为自动开启
-# GuiInventory可以替换背包
-# GuiIngameMenu可以替换ESC
-# 或者直接填写箱子界面名称，即可替换箱子界面(颜色符号需写为§)
-# PS：当你打开任意界面时，客户端的log内会提示本次打开的界面名哦
-match: "GuiInventory"
-hideHud:
-  - "hotbar"
-  - "potion"
-allowEscClose: true
-interactHud: true # 可以看到血量/魔力提示
-
-Functions:
-  # 通过判断按键，异步执行下面的这个【延时关闭界面】，它会延时100毫秒后才关闭，延时的这段时间是用来做背包的关闭动画的
-  # 判断的格式是  (条件)?{达成执行;}:{否则执行;};  如果没有否则执行  可以用0代替 写成 (条件)?{达成执行;}:0;
-  # || 是或的意思，也就是说当 当前的按键为 E或ESC,就关闭界面   && 则是且的意思
-  keyPress: "(方法.取当前按下键=='E' || 方法.取当前按下键=='ESCAPE')?{方法.关闭界面;}:0"
-
-  # 界面开启之后会自动执行open，此时就可以开始更新变量啦
-  open: "方法.异步执行方法('更新背包变量')"
-
-  # 由于功能完全是在客户端实现的，所以客户端并不能直接知道变量的值，我们需要通过【方法.更新变量值】来向服务端同步变量值到客户端内
-  # 文本内容需要用 ''包裹,不然mod无法识别这条公式
-  更新背包变量: |-
-    方法.更新变量值('terraria_defence','terraria_money','terraria_accessory_amount');
-    方法.延时(1000);
-    方法.异步执行方法('更新背包变量');
-
-# 设置4个装备槽和副手槽
-helmet_texture:
-  x: "方法.取屏幕宽度-32"
-  y: "方法.取屏幕高度-160"
-  width: 16
-  height: 16
-  texture: "方法.取文本长度(方法.取物品名(方法.取物品('container_5'))) < 0.1 ? 'gui/slot_helmet.png' : 'gui/slot_accessory_full.png'"
-  alpha: 0.75
-helmet_slot:
-  x: "方法.取屏幕宽度-32"
-  y: "方法.取屏幕高度-160"
-  identifier: "container_5"
-  drawBackground: false
-chestplate_texture:
-  x: "方法.取屏幕宽度-32"
-  y: "方法.取屏幕高度-142"
-  width: 16
-  height: 16
-  texture: "方法.取文本长度(方法.取物品名(方法.取物品('container_6'))) < 0.1 ? 'gui/slot_chestplate.png' : 'gui/slot_accessory_full.png'"
-  alpha: 0.75
-chestplate_slot:
-  x: "方法.取屏幕宽度-32"
-  y: "方法.取屏幕高度-142"
-  identifier: "container_6"
-  drawBackground: false
-leggings_texture:
-  x: "方法.取屏幕宽度-32"
-  y: "方法.取屏幕高度-124"
-  width: 16
-  height: 16
-  texture: "方法.取文本长度(方法.取物品名(方法.取物品('container_7'))) < 0.1 ? 'gui/slot_leggings.png' : 'gui/slot_accessory_full.png'"
-  alpha: 0.75
-leggings_slot:
-  x: "方法.取屏幕宽度-32"
-  y: "方法.取屏幕高度-124"
-  identifier: "container_7"
-  drawBackground: false
-offhand_texture:
-  x: "方法.取屏幕宽度-50"
-  y: "方法.取屏幕高度-142"
-  width: 16
-  height: 16
-  texture: "方法.取文本长度(方法.取物品名(方法.取物品('container_45'))) < 0.1 ? 'gui/slot_hook.png' : 'gui/slot_accessory_full.png'"
-  alpha: 0.75
-offhand_slot:
-  x: "方法.取屏幕宽度-50"
-  y: "方法.取屏幕高度-142"
-  identifier: "container_45"
-  drawBackground: false
-mount_texture:
-  x: "方法.取屏幕宽度-50"
-  y: "方法.取屏幕高度-124"
-  width: 16
-  height: 16
-  texture: "方法.取文本长度(方法.取物品名(方法.取物品('mount'))) < 0.1 ? 'gui/slot_mount.png' : 'gui/slot_accessory_full.png'"
-  alpha: 0.75
-mount_slot:
-  x: "方法.取屏幕宽度-50"
-  y: "方法.取屏幕高度-124"
-  identifier: "mount"
-  drawBackground: false
 # 饰品
 accessories_label:
   x: "方法.取屏幕宽度-32"
@@ -183,26 +92,6 @@ accessory7_slot:
   identifier: "accessory7"
   drawBackground: false
 
-# 设置合成槽位
-crafting_label:
-  x: "24"
-  y: "110"
-  center: true
-  texts: "合成"
-crafting_texture:
-  x: "18"
-  y: "120"
-  width: 12
-  height: 12
-  texture: "gui/slot_crafting.png"
-crafting_slot:
-  x: "18"
-  y: "120"
-  width: 12
-  height: 12
-  identifier: "container_0"
-  drawBackground: false
-  tip: "&2&3&3&r制作窗口"
 # 防御
 defence_texture:
   x: "方法.取屏幕宽度-50"
@@ -234,7 +123,7 @@ slot1-1_texture:
 slot1-1_slot:
   x: "8"
   y: "10"
-  identifier: "container_36"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 27 )"
   drawBackground: false
 slot1-2_texture:
   x: "26"
@@ -246,7 +135,7 @@ slot1-2_texture:
 slot1-2_slot:
   x: "26"
   y: "10"
-  identifier: "container_37"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 28 )"
   drawBackground: false
 slot1-3_texture:
   x: "44"
@@ -258,7 +147,7 @@ slot1-3_texture:
 slot1-3_slot:
   x: "44"
   y: "10"
-  identifier: "container_38"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 29 )"
   drawBackground: false
 slot1-4_texture:
   x: "62"
@@ -270,7 +159,7 @@ slot1-4_texture:
 slot1-4_slot:
   x: "62"
   y: "10"
-  identifier: "container_39"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 30 )"
   drawBackground: false
 slot1-5_texture:
   x: "80"
@@ -282,7 +171,7 @@ slot1-5_texture:
 slot1-5_slot:
   x: "80"
   y: "10"
-  identifier: "container_40"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 31 )"
   drawBackground: false
 slot1-6_texture:
   x: "98"
@@ -294,7 +183,7 @@ slot1-6_texture:
 slot1-6_slot:
   x: "98"
   y: "10"
-  identifier: "container_41"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 32 )"
   drawBackground: false
 slot1-7_texture:
   x: "116"
@@ -306,7 +195,7 @@ slot1-7_texture:
 slot1-7_slot:
   x: "116"
   y: "10"
-  identifier: "container_42"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 33 )"
   drawBackground: false
 slot1-8_texture:
   x: "134"
@@ -318,7 +207,7 @@ slot1-8_texture:
 slot1-8_slot:
   x: "134"
   y: "10"
-  identifier: "container_43"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 34 )"
   drawBackground: false
 slot1-9_texture:
   x: "152"
@@ -330,7 +219,7 @@ slot1-9_texture:
 slot1-9_slot:
   x: "152"
   y: "10"
-  identifier: "container_44"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 35 )"
   drawBackground: false
 # line 2
 slot2-1_texture:
@@ -343,7 +232,7 @@ slot2-1_texture:
 slot2-1_slot:
   x: "8"
   y: "28"
-  identifier: "container_9"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) )"
   drawBackground: false
 slot2-2_texture:
   x: "26"
@@ -355,7 +244,7 @@ slot2-2_texture:
 slot2-2_slot:
   x: "26"
   y: "28"
-  identifier: "container_10"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 1 )"
   drawBackground: false
 slot2-3_texture:
   x: "44"
@@ -367,7 +256,7 @@ slot2-3_texture:
 slot2-3_slot:
   x: "44"
   y: "28"
-  identifier: "container_11"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 2 )"
   drawBackground: false
 slot2-4_texture:
   x: "62"
@@ -379,7 +268,7 @@ slot2-4_texture:
 slot2-4_slot:
   x: "62"
   y: "28"
-  identifier: "container_12"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 3 )"
   drawBackground: false
 slot2-5_texture:
   x: "80"
@@ -391,7 +280,7 @@ slot2-5_texture:
 slot2-5_slot:
   x: "80"
   y: "28"
-  identifier: "container_13"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 4 )"
   drawBackground: false
 slot2-6_texture:
   x: "98"
@@ -403,7 +292,7 @@ slot2-6_texture:
 slot2-6_slot:
   x: "98"
   y: "28"
-  identifier: "container_14"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 5 )"
   drawBackground: false
 slot2-7_texture:
   x: "116"
@@ -415,7 +304,7 @@ slot2-7_texture:
 slot2-7_slot:
   x: "116"
   y: "28"
-  identifier: "container_15"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 6 )"
   drawBackground: false
 slot2-8_texture:
   x: "134"
@@ -427,7 +316,7 @@ slot2-8_texture:
 slot2-8_slot:
   x: "134"
   y: "28"
-  identifier: "container_16"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 7 )"
   drawBackground: false
 slot2-9_texture:
   x: "152"
@@ -439,7 +328,7 @@ slot2-9_texture:
 slot2-9_slot:
   x: "152"
   y: "28"
-  identifier: "container_17"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 8 )"
   drawBackground: false
 # line 3
 slot3-1_texture:
@@ -452,7 +341,7 @@ slot3-1_texture:
 slot3-1_slot:
   x: "8"
   y: "46"
-  identifier: "container_18"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 9 )"
   drawBackground: false
 slot3-2_texture:
   x: "26"
@@ -464,7 +353,7 @@ slot3-2_texture:
 slot3-2_slot:
   x: "26"
   y: "46"
-  identifier: "container_19"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 10 )"
   drawBackground: false
 slot3-3_texture:
   x: "44"
@@ -476,7 +365,7 @@ slot3-3_texture:
 slot3-3_slot:
   x: "44"
   y: "46"
-  identifier: "container_20"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 11 )"
   drawBackground: false
 slot3-4_texture:
   x: "62"
@@ -488,7 +377,7 @@ slot3-4_texture:
 slot3-4_slot:
   x: "62"
   y: "46"
-  identifier: "container_21"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 12 )"
   drawBackground: false
 slot3-5_texture:
   x: "80"
@@ -500,7 +389,7 @@ slot3-5_texture:
 slot3-5_slot:
   x: "80"
   y: "46"
-  identifier: "container_22"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 13 )"
   drawBackground: false
 slot3-6_texture:
   x: "98"
@@ -512,7 +401,7 @@ slot3-6_texture:
 slot3-6_slot:
   x: "98"
   y: "46"
-  identifier: "container_23"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 14 )"
   drawBackground: false
 slot3-7_texture:
   x: "116"
@@ -524,7 +413,7 @@ slot3-7_texture:
 slot3-7_slot:
   x: "116"
   y: "46"
-  identifier: "container_24"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 15 )"
   drawBackground: false
 slot3-8_texture:
   x: "134"
@@ -536,7 +425,7 @@ slot3-8_texture:
 slot3-8_slot:
   x: "134"
   y: "46"
-  identifier: "container_25"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 16 )"
   drawBackground: false
 slot3-9_texture:
   x: "152"
@@ -548,7 +437,7 @@ slot3-9_texture:
 slot3-9_slot:
   x: "152"
   y: "46"
-  identifier: "container_26"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 17 )"
   drawBackground: false
 # line 4
 slot4-1_texture:
@@ -561,7 +450,7 @@ slot4-1_texture:
 slot4-1_slot:
   x: "8"
   y: "64"
-  identifier: "container_27"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 18 )"
   drawBackground: false
 slot4-2_texture:
   x: "26"
@@ -573,7 +462,7 @@ slot4-2_texture:
 slot4-2_slot:
   x: "26"
   y: "64"
-  identifier: "container_28"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 19 )"
   drawBackground: false
 slot4-3_texture:
   x: "44"
@@ -585,7 +474,7 @@ slot4-3_texture:
 slot4-3_slot:
   x: "44"
   y: "64"
-  identifier: "container_29"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 20 )"
   drawBackground: false
 slot4-4_texture:
   x: "62"
@@ -597,7 +486,7 @@ slot4-4_texture:
 slot4-4_slot:
   x: "62"
   y: "64"
-  identifier: "container_30"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 21 )"
   drawBackground: false
 slot4-5_texture:
   x: "80"
@@ -609,7 +498,7 @@ slot4-5_texture:
 slot4-5_slot:
   x: "80"
   y: "64"
-  identifier: "container_31"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 22 )"
   drawBackground: false
 slot4-6_texture:
   x: "98"
@@ -621,7 +510,7 @@ slot4-6_texture:
 slot4-6_slot:
   x: "98"
   y: "64"
-  identifier: "container_32"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 23 )"
   drawBackground: false
 slot4-7_texture:
   x: "116"
@@ -633,7 +522,7 @@ slot4-7_texture:
 slot4-7_slot:
   x: "116"
   y: "64"
-  identifier: "container_33"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 24 )"
   drawBackground: false
 slot4-8_texture:
   x: "134"
@@ -645,7 +534,7 @@ slot4-8_texture:
 slot4-8_slot:
   x: "134"
   y: "64"
-  identifier: "container_34"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 25 )"
   drawBackground: false
 slot4-9_texture:
   x: "152"
@@ -657,12 +546,5 @@ slot4-9_texture:
 slot4-9_slot:
   x: "152"
   y: "64"
-  identifier: "container_35"
+  identifier: "方法.合并文本('container_', 方法.到整数(方法.取变量('GUI_slot_amount')) + 26 )"
   drawBackground: false
-# 显示钱币
-money_label:
-  x: "8"
-  y: "82"
-  texts: "方法.合并文本('金钱: ', 方法.取变量('terraria_money'))"
-
-
